Added About Us Page, and fixed some bugs in index page

--- a/styles/index.css
+++ b/styles/index.css
@@ -43,7 +43,7 @@ body {
 }
 
 .product-tease {
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     padding-bottom: 89px;
     padding-top: 94px;
     padding-left: 80px;
