--- a/styles/index.css
+++ b/styles/index.css
@@ -23,15 +23,16 @@ body {
 
 .hero-section p {
     font-family: 'Source Sans 3', sans-serif;
-    font-size: 20px;
+    font-size: 1.5vw;
     color: #000000;
-    width: 850px;
+    max-width: 850px;
+    width: 60%;
 }
 
 .hero-section h1 {
     font-family: 'Manrope', sans-serif;
     font-weight: 400;
-    font-size: 36px;
+    font-size: 2.5vw;
     color: #ef4444;
     padding-top: 40px;
 }
@@ -40,6 +41,17 @@ body {
     margin: auto;
     margin-top: 30px;
     text-align: center;
+}
+
+@media screen and (min-width: 1000px) {
+    .hero-section > h1 {
+        font-size: 36px;
+    }
+
+    .hero-section > p {
+        font-size: 20px;
+    }
+
 }
 
 /* Product Tease Section */
@@ -55,7 +67,7 @@ body {
 .product-tease > h1 {
     font-family: 'Manrope', sans-serif;
     font-weight: 400;
-    font-size: 36px;
+    font-size: 2.5vw;
     color: #ef4444;
 }
 
@@ -63,8 +75,20 @@ body {
 
     margin-top: 20px;
     font-family: 'Source Sans 3', sans-serif;
-    font-size: 20px;
-    width: 840px;
+    font-size: 1.5vw;
+    max-width: 840px;
+    width: 58%;
+}
+
+@media screen and (min-width: 1000px) {
+    .product-tease > h1 {
+        font-size: 36px;
+    }
+
+    .product-tease > p {
+        font-size: 20px;
+    }
+
 }
 
 .product-card-container {
