--- a/styles/blogcontent.css
+++ b/styles/blogcontent.css
@@ -1,11 +1,9 @@
-body {
+.body {
     margin:0;
-    padding:0;
 }
 
-
 .hero-section img {
-    width: 100%;
+    width:100%;
     margin-bottom:100px;
 }
 
@@ -14,86 +12,49 @@ body {
     font-weight: 400;
     font-size: 36px;
     color: #ef4444;
-    margin-bottom: 29px;
-    margin-left:80px;
-
-
-}
-
-.hero-section  p {
-    font-family: 'Source Sans 3', sans-serif;
-    font-size: 20px;
-    color: #000000;
-    margin-bottom: 29px;
-    max-width: 550px;
-    width:100%;
+    margin-bottom: 20px;
+    max-width: 1200px;
+    width: 90%;
     margin-left:80px;
 }
 
-.blog-posts{
-    background-color: #E5E7EB;
-    padding: 40px 80px;
-    display:flex;
-    justify-content: center;
-}
-.blog-wrapper {
-    display:flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin: auto;
-}
-
-.post {
-    background-color: #ffffff;
-
-    padding: 20px;
-    max-width:400px;
-    height:400px;
-    border-radius: 7px;
-    text-decoration: none;
-}
-
-.blog-wrapper a{
-    text-decoration: none;
-}
-
-.post h2 {
-    max-width: 400px;
-    font-family: 'Manrope', sans-serif;
-    font-weight: 400;
-    font-size:24px;
-    color: #ef4444;
-    margin-bottom: 10px;
-    
-}
-
-.post p {
-    max-width: 400px;
-    font-family: 'Source Sans 3', sans-serif;
-    font-weight: 400;
-    font-size:20px;
-    text-decoration: none;
-    color: #000000;
-}
-
-.post #post-date {
-    max-width: 400px;
+.hero-section p {
     font-family: 'IBM Plex Sans', sans-serif;
     font-weight: 400;
-    font-size:14px;
-    margin-bottom:10px;
-    margin-left:0;
-    text-decoration: none;
-
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 80px;
+    margin-left:80px;
+    max-width: 1200px;
+    width: 90%;
 }
 
-.post:hover > h2, .post:hover > p {
-    color: #E5E7EB;
+.blog-content {
+    background-color: #E5E7EB;
+    padding: 40px 80px;
 }
 
+.blog-content p {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size:20px;
+    margin-bottom: 20px;
+    text-align: justify;
+    text-justify: auto;
+    max-width: 1200px;
+    width: 100%;
+}
 
-.navbar {
+.blog-content h2 {
+    font-family: 'Manrope', sans-serif;
+    font-weight: 400;
+    color: #ef4444;
+    font-size:24px;
+    margin-bottom: 20px;
+    max-width: 1200px;
+    width: 100%;
+}
+
+    .navbar {
       padding: 2% 1%;
     }
 
@@ -156,10 +117,8 @@ body {
       content: url(/icons/arrow-top-right-red.svg);
       transform: rotate(45deg);
     }
-
-    body {
-        margin: 0;
-    }
+    
+    
     footer {
         background-color: #201f1f;
         padding-bottom: 5px;
